--- a/html/index.html
+++ b/html/index.html
@@ -41,11 +41,11 @@
   <article who="spax" emotion="smirk">
     Speaking of...
   </article>
-  <article type="webring">
+  <article class="center short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.online/">back</a> <a href="https://terezi.pyrope.net/ring">index</a> <a href="https://terezi.pyrope.net/">next</a>
   </article>
-  <!--<article type="buttons">
+  <!--<article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
     <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541"><img alt="graphic design is my passion" src="https://cyber.dabamos.de/88x31/graphicdesign.gif"></a>
     <a href="https://yugoslavia.best/"><img alt="yugoslavia" src="https://cyber.dabamos.de/88x31/blinchik.gif"></a>
@@ -59,7 +59,7 @@
     also do some digging on friends profiles and display those here too
     also also maybe make a custom replacable element so I don't have to copypaste this on every page I want it to be on?
   </article>-->
-  <article type="center">
+  <article class="center short">
     [buttons coming soon]
   </article>
   <article who="spax" emotion="blush">
