--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -93,7 +93,7 @@
     <article who="spax" emotion="happy">
       Cya!
     </article>
-    <article type="short">
+    <article class="short">
       (<a href="./index.html">Click here</a> to go back to the main page!)
     </article>
   </body>
