--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-    <article type="art" id="ref">
+    <article class="art" id="ref">
       <span id="clarifications-header">!! Scroll down for clarifications !!</span>
       <img src="/images/art/nahua-bananas-refsheet.png" alt="Reference sheet for Nahua (Na-hoo-wa), a light blue axolotl with dark blue, yellow, and orange accents. She's shown from the front (both clothed and nude) and back; she looks cheery in the clothed picture and flustered in the nude one, which is censored with an eye-popping smiley. She's wearing shorts, kneesocks, a tanktop with an up arrow on it, and headphones. She is 5 feet 3 inches (160 centimeters) tall, 19 years old, and uses she/they pronouns. Design notes: Always wears headphones or ear-coverings (she looks weird without them); doesn't wear furs (they stick uncomfortably to the mucus on her skin); yellow eyelash-things are optional, but iconic; as an amphibian, she doesn't have breasts; hair is made out of kelp or something, IDK, go wild; has minor transformative powers (lore).">
       Artist: 1LikeBananas<br>
@@ -80,10 +80,10 @@
       </div>
       </div>
     </article>
-    <article type="short">
+    <article class="short">
       Last updated: August 15th, 2024<br>
     </article>
-    <article type="short">
+    <article class="short">
       (And <a href="./index.html">click here</a> to see the main page!)
     </article>
     <script>
