turn "back index next" into "<- everyone ->"

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
   </article>
   <article class="center short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
-    <a href="https://coolstation.space/">back</a> <a href="https://terezi.pyrope.net/ring">index</a> <a href="https://terezi.pyrope.net/">next</a>
+    <a href="https://coolstation.space/">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://terezi.pyrope.net/">-&gt;</a>
   </article>
   <!--<article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
