--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -33,7 +33,7 @@
     -->
     <article>
       <a href="./nahua-ref-sheet.html">Nahua Ref Sheet</a><br>
-      The ref sheet of Nahua! Since I don't have an official ref sheet yet, I've picked a few of the most up-to-date pieces of her to display here.
+      The ref sheet of my OC, Nahua!
     </article>
     <!--
     <article>
