clean up renderHTML (now renamed to buildHTML)

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -14,7 +14,10 @@
   <!-- hey! if you wanna see how this site gets built, check out spax.zone/js/buildDEPdialogue.js -->
   <style>
     article {
-      white-space: nowrap;
+      white-space: pre;
+    }
+    article.last {
+      margin-bottom: 10px;
     }
     span.break {
       display: block;
