add my DEP HTML port to my sitelist

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -46,9 +46,16 @@
     </article>
     -->
     <article>
+      <a href="https://dep.spax.zone/">Dweller's Empty Path HTML Port</a><br>
+      Temmie Chang's second RPG, Dweller's Empty Path!<br>
+      This is technically a mod of the game that adds QoL features and fixes some bugs, but it stays true enough to the original game that I'm fine with hosting that instead.<br>
+      The original game can be found <a href="https://tuyoki.itch.io/dwellers-empty-path">here</a>.<br>
+      Playtime: ~2 hours
+    </article>
+    <article>
       <a href="./DEPalldialogue.html">(SPOILERS) All DEP Dialogue</a><br>
       All Dweller's Empty Path dialogue from the game! Duplicates are removed.<br>
-      Spoilers ahead! Please <a href="https://tuyoki.itch.io/dwellers-empty-path">play the game first</a>.
+      Spoilers ahead! Please <a href="https://dep.spax.zone/">play the game first</a>.
     </article>
     <article>
       <a href="./alldepfaces.html">All DEP Character Faces</a><br>
