update with the mod link too

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -49,7 +49,7 @@
       <a href="https://dep.spax.zone/">Dweller's Empty Path HTML Port</a><br>
       Temmie Chang's second RPG, Dweller's Empty Path!<br>
       This is technically a mod of the game that adds QoL features and fixes some bugs, but it stays true enough to the original game that I'm fine with hosting that instead.<br>
-      The original game can be found <a href="https://tuyoki.itch.io/dwellers-empty-path">here</a>.<br>
+      The original game can be found <a href="https://tuyoki.itch.io/dwellers-empty-path">here</a>, and the modded one <a href="https://andrewharn.itch.io/dwellers-empty-path-plus">here</a>.<br>
       Playtime: ~2 hours
     </article>
     <article>
