quick css update for the bottom margin

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -34,9 +34,9 @@
       #ref {
         width: 75%;
         max-width: revert;
-        & > img {
-          margin-bottom: 10px;
-        }
+      }
+      #ref img {
+        margin-bottom: 10px;
       }
       #refcontainer {
         position: relative;
