align property and small style update to accommodate for syntax

--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,7 @@
   <article who="spax" emotion="smirk">
     Speaking of...
   </article>
-  <article class="center short">
+  <article class="centertext short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/">-&gt;</a>
   </article>
@@ -59,7 +59,7 @@
     also do some digging on friends profiles and display those here too
     also also maybe make a custom replacable element so I don't have to copypaste this on every page I want it to be on?
   </article>-->
-  <article class="center short">
+  <article class="centertext short">
     [buttons coming soon]
   </article>
   <article who="spax" emotion="blush">
