characterName update and rewrite of allDialogue structure (also threads are now "section"s)

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -17,7 +17,7 @@
       gap: 15px;
       margin: 5px 0;
     }
-    body > div {
+    body > section {
       display: flex;
       flex-flow: column;
       align-items: center;
