--- a/html/index.html
+++ b/html/index.html
@@ -45,6 +45,10 @@
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/">-&gt;</a>
   </article>
+  <article id="cobaltWebring" class="centertext short" name="spax.zone">
+    part of the cobalt webring<br><br>
+    (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
+  </article>
   <!--<article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
     <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541"><img alt="graphic design is my passion" src="https://cyber.dabamos.de/88x31/graphicdesign.gif"></a>
