--- a/html/index.html
+++ b/html/index.html
@@ -41,14 +41,18 @@
   <article who="spax" emotion="smirk">
     Speaking of...
   </article>
-  <article class="centertext short">
+  <article id="mcai-webring" class="webring centertext short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
     <a href="https://coolstation.space/">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/">-&gt;</a>
   </article>
-  <article id="cobaltWebring" class="centertext short" name="spax.zone">
+  <article id="cobaltWebring" class="webring centertext short" name="spax.zone"><div class="remove">
     part of the cobalt webring<br><br>
     (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
-  </article>
+  </div></article>
+  <article id="eggbug-eggring" class="webring centertext short"><div class="remove">
+    part of the cohost webring<br><br>
+    (this should be replaced with the actual webring by <a href="/js/js-controlled-webrings.js">this</a>)
+  </div></article>
   <!--<article class="buttons">
     <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
     <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541"><img alt="graphic design is my passion" src="https://cyber.dabamos.de/88x31/graphicdesign.gif"></a>
