even more webring js organization

--- a/html/index.html
+++ b/html/index.html
@@ -43,7 +43,7 @@
   </article>
   <article id="mcai-webring" class="webring centertext short">
     part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
-    <a href="https://coolstation.space/">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/">-&gt;</a>
+    <a href="https://coolstation.space/" class="nowrap">&lt;-</a> <a href="https://terezi.pyrope.net/ring">everyone</a> <a href="https://marbelynrye.000.pe/" class="nowrap">-&gt;</a>
   </article>
   <article id="cobaltWebring" class="webring centertext short" name="spax.zone"><div class="remove">
     part of the cobalt webring<br><br>
