adds more robust whitespace control via "pre" class. closes #40

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -12,31 +12,5 @@
   <link rel="icon" href="/images/faces/yoki/Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   <!-- hey! if you wanna see how this site gets built, check out spax.zone/js/buildDEPdialogue.js -->
-  <style>
-    body {
-      gap: 15px;
-      margin: 5px 0;
-    }
-    body > section {
-      display: flex;
-      flex-flow: column;
-      align-items: center;
-      gap: 5px;
-    }
-    article {
-      white-space: pre;
-    }
-    span.break {
-      display: block;
-    }
-    @media only screen and (max-width: 645px) {
-      article {
-        white-space: wrap;
-      }
-      article span.break:not(.end) {
-        display: none;
-      }
-    }
-  </style>
 </head>
-<body></body></html>
+<body class="threads pre"></body></html>
