small general fixes

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -1,11 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="manifest" lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <title>Changelog</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Spax's (VERY OUTDATED) Site Changelog</title>
     <meta name="description" content="Manually documenting major changes to the site.">
     <meta property="og:title" content="Spax's (VERY OUTDATED) Site Changelog">
     <meta property="og:description" content="Manually documenting major changes to the site.">
