--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -1,11 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="manifest" lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <title>Planned Changes</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Spax's (VERY OUTDATED) Planned Changes</title>
     <meta name="description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:title" content="Spax's (VERY OUTDATED) Planned Changes">
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
