--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -19,7 +19,7 @@ haha now it's edited by spax:)
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <meta property="og:title" content="Spax Day">
-    <meta property="og:description" content="Happy birthday Spax">
+    <meta name="description" content="Happy birthday Spax">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://calmbubbles.github.io/zerasGift/img/giftBox.png" type="image/png">
     <link rel="icon" href="https://calmbubbles.github.io/zerasGift/img/giftBox.png">
