--- a/html/test.html
+++ b/html/test.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="manifest" lang="en-US">
 <head>
-  <meta charset="utf-8">
-  <title>spax.zone</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="theme-color" content="#306850">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
+  <title>test page for dialogue styling</title>
   <link rel="icon" href="/images/icons/Smirk_Circle.png">
   <link rel="stylesheet" href="/css/experimental.css">
   <style>
