--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -1,11 +1,7 @@
 <!DOCTYPE HTML>
 <html manifest="manifest" lang="en-US">
   <head>
-    <meta charset="utf-8">
-    <title>Is Spax At School?</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Is Spax Currently At School?</title>
     <meta name="description" content="See if I'm currently at school or not!">
     <meta property="og:title" content="Is Spax Currently At School?">
     <meta property="og:description" content="See if I'm currently at school or not!">
