insane metadata automation

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html><html manifest="manifest" lang="en-US"><head>
-  <meta charset="utf-8">
+<!DOCTYPE html><html><head>
   <title>All DEP Dialogue</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="theme-color" content="#306850">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
-  <meta property="og:title" content="All DEP Dialogue">
-  <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
-  <meta property="og:type" content="website">
   <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
   <link rel="icon" href="/images/faces/yoki/Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css" type="text/css">
