--- a/html/changelog.html
+++ b/html/changelog.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
     <title>Spax's (VERY OUTDATED) Site Changelog</title>
     <meta name="description" content="Manually documenting major changes to the site.">
-    <meta property="og:title" content="Spax's (VERY OUTDATED) Site Changelog">
-    <meta property="og:description" content="Manually documenting major changes to the site.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
