--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -1,17 +1,9 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Nahua Ref Sheet</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<meta name="description" content="Nahua's ref sheet!">
-    <meta property="og:title" content="Nahua Ref Sheet">-->
-    <!--<meta property="og:description" content="Nahua's ref sheet!">-->
     <meta property="og:image" content="https://spax.zone/images/art/nahua-bananas-refsheet.png" type="image/png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
