--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -1,16 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Spax's Site List</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A place that links every public page currently on my website!">
-    <meta property="og:title" content="Spax's Site List">
-    <meta property="og:description" content="A place that links every public page currently on my website!">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
