--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -11,13 +11,8 @@ haha now it's edited by spax:)
 
 
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html>
   <head>
-    <meta name="theme-color" content="#306850">
-    
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <meta property="og:title" content="Spax Day">
     <meta name="description" content="Happy birthday Spax">
     <meta property="og:type" content="website">
