--- a/html/test.html
+++ b/html/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
 <head>
   <title>test page for dialogue styling</title>
   <link rel="icon" href="/images/icons/Smirk_Circle.png">
