--- a/html/404.html
+++ b/html/404.html
@@ -1,15 +1,10 @@
 <!DOCTYPE HTML>
-<html manifest="manifest">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>404 NOT FOUND</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="That page doesn't exist!">
     <meta property="og:description" content="How did we get here?">
-    <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/claire/Dizzy.png" type="image/png">
-    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="https://spax.zone/css/experimental.css">
   </head>
   <body>
