--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -1,16 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Mojo's Arrow Advice!</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="My create project from 2022.">
-    <meta property="og:title" content="Mojo's Arrow Advice!">
-    <meta property="og:description" content="My create project from 2022.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
