--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -1,16 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>All of Spax's Face Sprites</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
-    <meta property="og:title" content="All Spax DEP Face Sprites">
-    <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
