--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
 <head>
-  <meta charset="utf-8">
   <title>spax.zone</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="theme-color" content="#306850">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="a webbed site for a webbed creachure">
-  <meta property="og:title" content="spax.zone">
-  <meta property="og:description" content="a webbed site for a webbed creachure">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
   <link rel="icon" href="/images/icons/Smirk_Circle.png">
   <link rel="stylesheet" href="/css/experimental.css">
 </head>
