--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
     <title>Is Spax Currently At School?</title>
     <meta name="description" content="See if I'm currently at school or not!">
-    <meta property="og:title" content="Is Spax Currently At School?">
-    <meta property="og:description" content="See if I'm currently at school or not!">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
