--- a/html/main2.html
+++ b/html/main2.html
@@ -1,15 +1,7 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#306850">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="a webbed site for a webbed creachure">
-    <meta property="og:title" content="spax.zone">
-    <meta property="og:description" content="a webbed site for a webbed creachure">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <!--bootstrap (remove this in the future)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
