--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
     <title>Spax's (VERY OUTDATED) Planned Changes</title>
     <meta name="description" content="All of the changes that I'm planning on making for the website soon!">
-    <meta property="og:title" content="Spax's (VERY OUTDATED) Planned Changes">
-    <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
