--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
-<html manifest="manifest" lang="en-US">
+<html>
   <head>
-    <meta name="theme-color" content="#306850">
     <!--written entirely by calmbubbles-->
     <link rel="preload" href="https://calmbubbles.github.io/zerasGift/img/gift.png" as="image">
     
@@ -9,14 +8,7 @@
     <link rel="preload" href="/audio/spaxDay/se/box_shake.mp3" as="audio">
     <link rel="preload" href="/audio/spaxDay/se/bomba.mp3" as="audio">
     
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Happy Birthday Spax 2">
-    <meta property="og:title" content="Spax's Site">
-    <meta property="og:description" content="Happy Birthday Spax 2">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
     <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
