nahua DEP faces debut!

--- a/html/allcustomfaces.html
+++ b/html/allcustomfaces.html
@@ -1,256 +1,121 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>All DEP Face Sprites</title>
-    <meta name="description" content="A collection of all the face sprites used in Dweller's Empty Path!">
+    <title>All of Custom Face Sprites</title>
+    <meta name="description" content="A collection of all of the custom DEP sprites supported on this website.">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
-    <link rel="stylesheet" href="/css/experimental.css">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
+    <style>
+      details[name="spaxshow"]:not([open]) ~ article[who="spax"] {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <!-- the regex that made this possible:
-    article\[who=(.+?)\](?:\[emotion=(.+?)\])?::before \{\n.*\n\}
-    <article who="$1" emotion="$2">\n$1<br>$2\n</article>
-    -->
-    <!-- aimottle -->
-    <article who="aimottle" emotion="angry">
-      Aimottle<br>Angry
+    <article who="nahua" emotion="angry">
+      Nahua<br>Angry
     </article>
-    <article who="aimottle" emotion="neutral">
-      Aimottle<br>Neutral
+    <article who="nahua" emotion="bashful">
+      Nahua<br>Bashful
     </article>
-    <article who="aimottle" emotion="unsure">
-      Aimottle<br>Unsure
+    <article who="nahua" emotion="confused">
+      Nahua<br>Confused
     </article>
-    <!-- caina -->
-    <article who="caina" emotion="concerned">
-      Caina<br>Concerned
+    <article who="nahua" emotion="disappointed">
+      Nahua<br>Disappointed
     </article>
-    <article who="caina" emotion="disapproval">
-      Caina<br>Disapproval
+    <article who="nahua" emotion="dizzy">
+      Nahua<br>Dizzy
     </article>
-    <article who="caina" emotion="down">
-      Caina<br>Down
+    <article who="nahua" emotion="expressionless">
+      Nahua<br>Expressionless
     </article>
-    <article who="caina" emotion="laugh">
-      Caina<br>Laugh
+    <article who="nahua" emotion="happy">
+      Nahua<br>Happy
     </article>
-    <article who="caina" emotion="look">
-      Caina<br>Look
+    <article who="nahua" emotion="joyful">
+      Nahua<br>Joyful
     </article>
-    <article who="caina" emotion="neutral">
-      Caina<br>Neutral
+    <article who="nahua" emotion="look">
+      Nahua<br>Look
     </article>
-    <article who="caina" emotion="smile">
-      Caina<br>Smile
+    <article who="nahua" emotion="nervous">
+      Nahua<br>Nervous
     </article>
-    <article who="caina" emotion="sneer">
-      Caina<br>Sneer
+    <article who="nahua" emotion="neutral">
+      Nahua<br>Neutral
     </article>
-    <!-- charles -->
-    <article who="charles" emotion="look-down">
-      Charles<br>Look Down
+    <article who="nahua" emotion="pensive">
+      Nahua<br>Pensive
     </article>
-    <article who="charles" emotion="neutral">
-      Charles<br>Neutral
+    <article who="nahua" emotion="sad">
+      Nahua<br>Sad
     </article>
-    <article who="charles" emotion="sweat-drop">
-      Charles<br>Sweat Drop
+    <article who="nahua" emotion="scared">
+      Nahua<br>Scared
     </article>
-    <!-- claire -->
-    <article who="claire" emotion="aghast">
-      Claire<br>Aghast
+    <article who="nahua" emotion="shocked">
+      Nahua<br>Shocked
     </article>
-    <article who="claire" emotion="dizzy">
-      Claire<br>Dizzy
+    <article who="nahua" emotion="sleepy">
+      Nahua<br>Sleepy
     </article>
-    <article who="claire" emotion="happy">
-      Claire<br>Happy
+    <article who="nahua" emotion="sus">
+      Nahua<br>Sus
     </article>
-    <article who="claire" emotion="look">
-      Claire<br>Look
+    <details name="spaxshow">
+      <summary>Legacy "Spax" Facial Expressions</summary>
+    </details>
+    <article who="spax" emotion="blush">
+      Spax<br>Blush
     </article>
-    <article who="claire" emotion="mad">
-      Claire<br>Mad
+    <article who="spax" emotion="confused">
+      Spax<br>Confused
     </article>
-    <article who="claire" emotion="neutral">
-      Claire<br>Neutral
+    <article who="spax" emotion="disappointed">
+      Spax<br>Disappointed
     </article>
-    <article who="claire" emotion="pensive">
-      Claire<br>Pensive
+    <article who="spax" emotion="dizzy">
+      Spax<br>Dizzy
     </article>
-    <article who="claire" emotion="sad">
-      Claire<br>Sad
+    <article who="spax" emotion="enraged">
+      Spax<br>Enraged
     </article>
-    <article who="claire" emotion="sigh">
-      Claire<br>Sigh
+    <article who="spax" emotion="happy">
+      Spax<br>Happy
     </article>
-    <!-- dragon -->
-    <article who="dragon" emotion="dismiss">
-      Dragon<br>Dismiss
+    <article who="spax" emotion="look">
+      Spax<br>Look
     </article>
-    <article who="dragon" emotion="familiar">
-      Dragon<br>Familiar
+    <article who="spax" emotion="neutral">
+      Spax<br>Neutral
     </article>
-    <article who="dragon" emotion="neutral">
-      Dragon<br>Neutral
+    <article who="spax" emotion="pensive">
+      Spax<br>Pensive
     </article>
-    <article who="dragon" emotion="reveal">
-      Dragon<br>Reveal
+    <article who="spax" emotion="sleep">
+      Spax<br>Sleep
     </article>
-    <article who="dragon" emotion="smile">
-      Dragon<br>Smile
+    <article who="spax" emotion="smirk">
+      Spax<br>Smirk
     </article>
-    <article who="dragon" emotion="stern">
-      Dragon<br>Stern
+    <article who="spax" emotion="surprised">
+      Spax<br>Surprised
     </article>
-    <!-- este -->
-    <article who="este" emotion="stare">
-      Este<br>Stare
+    <article who="spax" emotion="sus">
+      Spax<br>Sus
     </article>
-    <!-- fountain kids -->
-    <article who="krys">
-      Krys
+    <article who="spax" emotion="sweat-drop">
+      Spax<br>Sweat Drop
     </article>
-    <article who="lerias">
-      Lerias
+    <article who="spax" emotion="talk">
+      Spax<br>Talk
     </article>
-    <article who="zusy">
-      Zusy
+    <article who="spax" emotion="woo">
+      Spax<br>Woo
     </article>
-    <!-- harp -->
-    <article who="harp" emotion="excited">
-      Harp<br>Excited
-    </article>
-    <article who="harp" emotion="neutral">
-      Harp<br>Neutral
-    </article>
-    <!-- heroes -->
-    <article who="chosen-one">
-      Chosen One
-    </article>
-    <article who="cleric">
-      Cleric
-    </article>
-    <article who="knight">
-      Knight
-    </article>
-    <article who="rogue">
-      Rogue
-    </article>
-    <!-- prince -->
-    <article who="prince" emotion="appalled">
-      Prince<br>Appalled
-    </article>
-    <article who="prince" emotion="head-turn">
-      Prince<br>Head Turn
-    </article>
-    <article who="prince" emotion="look-down">
-      Prince<br>Look Down
-    </article>
-    <article who="prince" emotion="look">
-      Prince<br>Look
-    </article>
-    <article who="prince" emotion="neutral">
-      Prince<br>Neutral
-    </article>
-    <!-- tem -->
-    <article who="tem" emotion="look-down">
-      Tem<br>Look Down
-    </article>
-    <article who="tem" emotion="neutral">
-      Tem<br>Neutral
-    </article>
-    <!-- tigertaur -->
-    <article who="tigertaur" emotion="grin">
-      Tigertaur<br>Grin
-    </article>
-    <article who="tigertaur" emotion="neutral">
-      Tigertaur<br>Neutral
-    </article>
-    <!-- woof -->
-    <article who="woof" emotion="awake">
-      Woof<br>Awake
-    </article>
-    <article who="woof" emotion="knocked-out">
-      Woof<br>Knocked Out
-    </article>
-    <article who="woof" emotion="look">
-      Woof<br>Look
-    </article>
-    <article who="woof" emotion="sleep">
-      Woof<br>Sleep
-    </article>
-    <!-- yoki -->
-    <article who="yoki" emotion="annoyed">
-      Yoki<br>Annoyed
-    </article>
-    <article who="yoki" emotion="disheartened">
-      Yoki<br>Disheartened
-    </article>
-    <article who="yoki" emotion="dizzy">
-      Yoki<br>Dizzy
-    </article>
-    <article who="yoki" emotion="look">
-      Yoki<br>Look
-    </article>
-    <article who="yoki" emotion="meditative">
-      Yoki<br>Meditative
-    </article>
-    <article who="yoki" emotion="neutral">
-      Yoki<br>Neutral
-    </article>
-    <article who="yoki" emotion="smile">
-      Yoki<br>Smile
-    </article>
-    <article who="yoki" emotion="surprised">
-      Yoki<br>Surprised
-    </article>
-    <article who="yoki" emotion="sweat-drop">
-      Yoki<br>Sweat Drop
-    </article>
-    <article who="yoki" emotion="think">
-      Yoki<br>Think
-    </article>
-    <article who="yoki" emotion="unsure-smile">
-      Yoki<br>Unsure Smile
-    </article>
-    <article who="yoki" emotion="unsure">
-      Yoki<br>Unsure
-    </article>
-    <article who="yoki" emotion="upset">
-      Yoki<br>Upset
-    </article>
-    <!-- younger yoki -->
-    <article who="youngeryoki" emotion="concern">
-      Younger Yoki<br>Concern
-    </article>
-    <article who="youngeryoki" emotion="happy">
-      Younger Yoki<br>Happy
-    </article>
-    <article who="youngeryoki" emotion="look">
-      Younger Yoki<br>Look
-    </article>
-    <article who="youngeryoki" emotion="neutral">
-      Younger Yoki<br>Neutral
-    </article>
-    <article who="youngeryoki" emotion="sigh">
-      Younger Yoki<br>Sigh
-    </article>
-    <!-- zera -->
-    <article who="zera" emotion="look">
-      Zera<br>Look
-    </article>
-    <article who="zera" emotion="neutral">
-      Zera<br>Neutral
-    </article>
-    <article who="zera" emotion="pout">
-      Zera<br>Pout
-    </article>
-    <article who="zera" emotion="smile">
-      Zera<br>Smile
-    </article>
-    <article who="zera" emotion="sneer">
-      Zera<br>Sneer
+    <article who="spax" emotion="worried">
+      Spax<br>Worried
     </article>
   </body>
 </html>
