--- a/html/index.html
+++ b/html/index.html
@@ -23,13 +23,13 @@
   <article who="claire" emotion="look">
     Spax hasn't worked on it in over two years.
   </article>
-  <article who="spax" emotion="look">
+  <article who="nahua" emotion="look">
     True...
   </article>
-  <article who="spax" emotion="happy">
+  <article who="nahua" emotion="happy">
     But keep an eye out for some new changes!
   </article>
-  <article who="spax" emotion="smirk">
+  <article who="nahua" emotion="neutral">
     Speaking of...
   </article>
   <article id="mcai-webring" class="webring centertext short">
@@ -61,7 +61,7 @@
   <article class="centertext short">
     [buttons coming soon]
   </article>
-  <article who="spax" emotion="blush">
+  <article who="nahua" emotion="bashful">
     Add my button to your site!<br>
     <a href="https://spax.zone/"><img src="https://spax.zone/images/buttons/button.gif"></a>
     <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/images/buttons/button.gif"&gt;&lt;/a&gt;</textarea>
