--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -54,9 +54,8 @@
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
     <article>
-      <a href="./allspaxfaces.html">All Spax Faces</a><br>
-      When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (I spent like two hours on them) <s>(dm me on discord if you wanna redo them for me)</s><br>
-      2024 update: these are being redone by <a href="https://ko-fi.com/ouchyzapgun">ouchyzapgun</a>!
+      <a href="./allcustomfaces.html">All Custom DEP Character Faces</a><br>
+      All currently supported custom portraits in the style of DEP. All Nahua portraits were done by Bananas! The old legacy Spax ones were done by me.
     </article>
     <!--
     <article>
