favicon update but better this time

--- a/html/allcustomfaces.html
+++ b/html/allcustomfaces.html
@@ -3,6 +3,7 @@
   <head>
     <title>All of Custom Face Sprites</title>
     <meta name="description" content="A collection of all of the custom DEP sprites supported on this website.">
+    <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
       details[name="spaxshow"]:not([open]) ~ article[who="spax"] {
