--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>spax.zone</title>
   <meta name="description" content="a webbed site for a webbed creachure">
+  <link rel="icon" href="/images/icons/Nahua_Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css">
 </head>
 <body>
