--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -3,6 +3,7 @@
   <head>
     <title>Spax's (VERY OUTDATED) Planned Changes</title>
     <meta name="description" content="All of the changes that I'm planning on making for the website soon!">
+    <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
