--- a/html/pt-br.html
+++ b/html/pt-br.html
@@ -3,6 +3,7 @@
   <head>
     <title>Portugese-Brazilian Characters w/ Temmie Font</title>
     <meta name="description" content="hi Luiz">
+    <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
