--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -3,6 +3,7 @@
   <head>
     <title>Spax's Site List</title>
     <meta name="description" content="A place that links every public page currently on my website!">
+    <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
