--- a/html/test.html
+++ b/html/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>test page for dialogue styling</title>
+  <link rel="icon" href="/images/icons/Nahua_Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css">
   <style>
     .test {
