--- a/html/changelog.html
+++ b/html/changelog.html
@@ -3,6 +3,7 @@
   <head>
     <title>Spax's (VERY OUTDATED) Site Changelog</title>
     <meta name="description" content="Manually documenting major changes to the site.">
+    <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
