--- a/html/allcustomfaces.html
+++ b/html/allcustomfaces.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>All of Custom Face Sprites</title>
+    <title>All Custom DEP Character Sprites</title>
     <meta name="description" content="A collection of all of the custom DEP sprites supported on this website.">
     <link rel="icon" href="/images/icons/Nahua_Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
