make eggbug eggring element full width

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,11 @@
   <title>spax.zone</title>
   <meta name="description" content="a webbed site for a webbed creachure">
   <link rel="stylesheet" href="/css/experimental.css">
+  <style>
+    #eggbug-eggring table {
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
   <article>
