mastodon website thing

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,8 @@
   <title>spax.zone</title>
   <meta name="description" content="a webbed site for a webbed creachure">
   <link rel="stylesheet" href="/css/experimental.css">
+  <!--to show mastodon that i own this website:-->
+  <link rel="me" href="https://furry.engineer/@spax">
   <style>
     #eggbug-eggring table {
       width: 100%;
